--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "personal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yu8888.github.io/Portfolio_Website/",
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.1",
@@ -26,6 +27,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "master -d build"
   },
   "eslintConfig": {
     "extends": [
